# Parametric-Modeling

./: .dvcignore  .gitignore  AGENTS.md  CLAUDE.md  DESIGN_DOCUMENT.md  README.md  STATS.md  _REGRESSION_AUDIT_ALL_FILES.txt  bootstrap_repo.sh  dvc.yaml  mlflow.db  params.yaml  pyproject.toml  run_live.sh  run_mock.sh  run_parallel.sh
.dvc/: .gitignore  config
.github/workflows/: ci.yml  ci_m1.yml  oracle-ci.yml
_out/e7b5fwwxep4b-27c3d2dad723f811182d6c79de1873c804c1bb33e1e365c029875faea3a02eda/: constraint_proof.json  drc_manual.json  manifest.json
analysis/verify/: hypotheses.md
bridge/: __init__.py  atomic_io.py  config.json  design_doc.py  directives.py  flatten_repo.py  gemini.py  loop.py  merge_resolver.py  orchestrator_flattened.txt  patch_integration.py  provider_adapters.py  reports.py  scheduler.py  smoke_route.py  streaming.py  task_plan.schema.json  turn.schema.json  turn_payload.schema.json  turns.py  verify_repair.py
bridge/agents/: claude.sh  codex.sh  gemini.sh
bridge/loop_pkg/: __init__.py  config.py  policy.py  turn_normalizer.py
bridge/mock_scenarios/: dual_agent_smoke.json  milestone_demo.json  smoke_route.json  streaming_demo.json  tri_agent_smoke.json
bridge/prompts/: system.md  system_engineering.md
bridge/verify_repair/: __init__.py  agent_tasks.py  bootstrap.py  classify.py  data.py  executor.py  loop.py  repairs.py
config/: coupon_spec.yaml  gc_policies.yaml  hardware.yaml  mlflow.yaml  openems_toolchain.json
coupongen/: layer_sets.json
coupongen/fab_profiles/: fab_profile.schema.json  generic.json  jlcpcb.json  oshpark_4layer.json  pcbway.json
coupongen/schemas/: coupon_spec.schema.json  manifest.schema.json
coupongen/stackups/: generic_2layer.json  generic_4layer.json  jlcpcb_2layer.json  jlcpcb_4layer.json  oshpark_4layer.json  stackup.schema.json
data/registry/: .gitkeep
docker/: Dockerfile
docs/: DETERMINISM_POLICY.md  determinism.md  experiment-tracking.md  kicad_integration_fix_20260122.md  loop_testing.md  m1_determinism_policy.md  m1_toolchain.md  orchestrator_hardening.md  orchestrator_locking_policy.md  reproduction.md
docs/milestones/: M0.md  M1.md  M2.md  M3.md  M4.md  M5.md  M6.md  M7.md  M8.md  M9.md
golden_hashes/: design_hashes.json
schemas/: constraint_proof.schema.json  coupon.schema.json  oracle_case.schema.json
scripts/: agent_doctor.sh  bootstrap_venv.sh  claude_preflight.sh  extract_json_by_schema.py  run_live_tri_agent_smoke_worktree.sh  run_loop_worktree.sh  run_verify_strict.sh
src/benchmarks/: __init__.py  m4_bench.py  m5_microbench.py  m5_scorebench.py
src/formula_foundry/: __init__.py  api.py  cli.py  derive.py  pipeline.py
src/formula_foundry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agent_policy.py  test_artifact_bundle.py  test_atomic_io.py  test_atomic_io_extras.py  test_auto_continue_progress.py  test_backfill_caps.py  test_backfill_policy_profile.py  test_bridge_turns_unit.py  test_cache.py  test_cache_extras.py  test_calibration_regression.py  test_calibration_suite.py  test_canonicalize_utils.py  test_case_fingerprint.py  test_case_validation.py  test_ci_real_openems.py  test_claude_wrapper.py  test_common_canonicalization.py  test_completion_gates_unit.py  test_constraints.py  test_consumption_enforcement.py  test_cp35_pipeline_integration.py  test_cp43_gpu_pipeline.py  test_derive.py  test_derived_groups.py  test_design_doc_helpers.py  test_design_document_contract.py  test_directives.py  test_docker_pinning.py  test_docs_required.py  test_drc_runner.py  test_em_touchstone_parsing.py  test_em_validation_edge_cases.py  test_engineering_profile.py  test_export_hashes.py  test_extract_json_by_schema.py  test_families_unit.py  test_field_export_policy.py  test_filler_suppression.py  (+193 more)
tests/gates/: __init__.py  test_g1_determinism.py  test_g2_constraints.py  test_g3_drc.py  test_g4_export_completeness.py  test_g5_hash_stability.py
tests/golden_exports/: README.md  __init__.py  export_hashes.json  layer_sets.json
tests/golden_hashes/: design_hashes.json
tests/golden_m3/: README.md  __init__.py  golden_fixtures.json  test_golden_m3_demo.py
tests/golden_specs/: __init__.py  f0_cal_001.json  f0_cal_001.yaml  f0_cal_002.json  f0_cal_002.yaml  f0_cal_003.json  f0_cal_003.yaml  f0_cal_004.json  f0_cal_004.yaml  f0_cal_005.json  f0_cal_005.yaml  f0_cal_006.json  f0_cal_006.yaml  f0_cal_007.json  f0_cal_007.yaml  f0_cal_008.json  f0_cal_008.yaml  f0_cal_009.json  f0_cal_009.yaml  f0_cal_010.json  f0_cal_010.yaml  f1_via_001.json  f1_via_001.yaml  f1_via_002.json  f1_via_002.yaml  f1_via_003.json  f1_via_003.yaml  f1_via_004.json  f1_via_004.yaml  f1_via_005.json  f1_via_005.yaml  f1_via_006.json  f1_via_006.yaml  f1_via_007.json  f1_via_007.yaml  f1_via_008.json  f1_via_008.yaml  f1_via_009.json  f1_via_009.yaml  f1_via_010.json  (+1 more)
tests/integration/: __init__.py  test_export_determinism_integration.py  test_f0_end_to_end.py  test_f1_end_to_end.py  test_kicad_drc_integration.py  test_manifest_provenance_integration.py
tests/tracking/: __init__.py  (+2 more)
toolchain/: kicad.lock.json  openems.lock.json
tools/: completion_gates.py  finalize_commit.py  git_guard.py  loop_test.py  m0.py  m1_compliance_report.py  pin_kicad_image.py  print_kicad_image_ref.py  spec_lint.py  verify.py
(+161 files in other folders)
