[project]
name = "formula-foundry"
version = "0.1.0"
description = "Formula Foundry: GPU-first EM surrogate + symbolic discovery pipeline"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "cupy-cuda12x",
    "numpy",
    "torch",
]

[project.scripts]
coupongen = "formula_foundry.coupongen.cli_main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.22",
  "rich>=13.7",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
]

# M3 tracking dependencies
tracking = [
  "mlflow>=2.10",
  "pyyaml>=6.0",
]

# DVC for pipeline versioning (M3)
dvc = [
  "dvc>=3.50",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 130
src = ["src", "tests", "tools", "bridge"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["SIM108"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
