[project]
name = "formula-foundry"
version = "0.1.0"
description = "Formula Foundry: GPU-first EM surrogate + symbolic discovery pipeline"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "cupy-cuda12x",
    "numpy",
    "torch",
]

[project.scripts]
coupongen = "formula_foundry.coupongen.cli_main:main"
m3 = "formula_foundry.m3.cli_main:main"
audit-m1 = "formula_foundry.coupongen.gate_runner:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.22",
  "rich>=13.7",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
]

# M3 tracking dependencies
tracking = [
  "mlflow>=2.10",
  "pyyaml>=6.0",
]

# DVC for pipeline versioning (M3)
dvc = [
  "dvc>=3.50",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "kicad_integration: marks tests as KiCad integration tests (require Docker + KiCad toolchain)",
    "gate_g1: Gate G1 - resolved design determinism",
    "gate_g2: Gate G2 - constraint proof completeness and reject/repair behavior",
    "gate_g3: Gate G3 - DRC clean (KiCad DRC passes with zero violations)",
    "gate_g4: Gate G4 - export completeness (all required layers + drill files present)",
    "gate_g5: Gate G5 - stable canonical hashes across repeated runs",
]

[tool.ruff]
line-length = 130
src = ["src", "tests", "tools", "bridge"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "SIM108",  # Allow ternary to if-else
    "SIM102",  # Allow nested if statements
    "SIM105",  # Allow try-except-pass (sometimes clearer than contextlib.suppress)
    "E501",    # Allow line too long (handled by format mostly)
    "E402",    # Allow imports after path manipulation in tests
    "B018",    # Allow useless attribute access (for CUDA checks)
    "B904",    # Allow raise without from in certain cases
    "E741",    # Allow ambiguous variable names
    "UP007",   # Allow Union type hints (for compatibility)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "F401"]  # Allow blind exception in tests and unused imports for optional deps
"src/formula_foundry/__init__.py" = ["F401"]  # Allow unused imports in __init__ for re-export
"src/formula_foundry/em/touchstone.py" = ["F821", "F401"]  # Allow undefined names for optional skrf
"src/formula_foundry/openems/sim_runner.py" = ["F821"]  # Allow undefined names for optional deps
"tools/m3/scripts/*.py" = ["F401"]  # Allow unused imports for optional deps

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
strict = false
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
mypy_path = "src"
plugins = ["pydantic.mypy"]
exclude = [
    "^runs/",
    "^\\.venv/",
    "^tests/",
    "^scripts/",
    "^tools/",
    "^bridge/",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped", "assignment", "arg-type", "return-value", "attr-defined", "name-defined"]

[[tool.mypy.overrides]]
module = ["yaml", "jsonschema", "cupy", "skrf", "pyarrow.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
